<resources>

    <string name="app_name">oa.bytter</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">OA.bytter</string>
    <string name="btn_upwork">签    到</string>
    
    <string name="btn_upworking">正在签到&#8230;</string>
    <string name="btn_downwork">签    退</string>
    <string name="btn_downworking">正在签退&#8230;</string>
    <string name="btn_login">登    录</string>
    <string name="btn_login_again">重新登录</string>
    <string name="btn_logining">正在登录&#8230;</string>
    <string name="text_username">用户名称</string>
    <string name="text_username_defalut">yangmq</string>
    <string name="text_password">用户密码</string>
    <string name="text_password_defalut">0</string>
    <string name="text_site">站点地址</string>
     <string name="text_site_defalut">http://oa.bytter.com/c6</string>
<!--     <string name="text_port">端口号</string>
    <string name="text_port_defalut">80</string> -->
    <string name="menu_exit">退出</string>
	<string name="msg_username_isnull">用户名称不能为空</string>
	<string name="msg_password_isnull">用户密码不能为空</string>
	<string name="msg_site_isnull">站点地址不能为空</string>
	<string name="msg_err">站点地址不能为空</string>
</resources>