<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Spinner 
        android:id="@+id/siteSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_username"
        android:singleLine="true"
        android:text="@string/text_username_defalut" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:text="@string/text_password_defalut" />

    <!-- <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleSmall"
        android:visibility="gone" /> -->

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login" />

    <Button
        android:id="@+id/upworkBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/btn_upwork" />

    <Button
        android:id="@+id/downworkBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/btn_downwork" />

</LinearLayout>